--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>Contact | Rachel Doran</title>
+  <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Rachel Doran</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
