--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Contact | Rachel Doran</title>
   <link rel="stylesheet" type="text/css" href="assets/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   
 </head>
 
